--- a/Css/style.css
+++ b/Css/style.css
@@ -2,12 +2,34 @@
 
 * {
     margin: auto;
+    max-width: 100%;
     box-sizing: border-box;
     text-decoration: none;
 }
-body{
+
+body {
     margin: 0;
     padding: 0;
+}
+
+/* ScrollBar */
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #869a8d;
+    border-radius: 12px;
+    transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #FF7F50;
 }
 
 /*** Navbar ***/
@@ -18,14 +40,6 @@ body{
     background-color: #FF7F50;
     border-bottom: 2px black solid;
 }
-  /* .navbar {
-    background-color: #333;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-  } */
 
 nav a img {
     margin: 4px 64px;
@@ -51,7 +65,7 @@ nav a img {
     height: 22%;
     width: 35%;
     padding: 7px 28px;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 
 }
 
@@ -80,10 +94,12 @@ nav a img {
     border-radius: 10vh;
 
 }
-span{
+
+span {
     font-size: 15px;
 }
-.nav-button span a{
+
+.nav-button span a {
     color: black;
 
 }
@@ -96,27 +112,31 @@ span{
 /* Slideshow container */
 .slideshow-container {
     border: 2px rgb(214, 165, 165) solid;
-    max-width: 100%;
+    width: auto;
     /* position: relative; */
     margin: 5px;
     height: 73vh;
 }
+
 .mySlides {
     display: none;
 }
 
 img.slide-image {
+    display: flex;
     margin: auto;
-
 }
 
 .slide-image {
+    display: flex;
     height: 73vh;
-    width: 205vh;
+    width: 100%;
 }
 
 .dot-border {
-    margin: -6%;
+    position: relative;
+    margin-top: -6%;
+
 }
 
 .dot {
@@ -164,7 +184,7 @@ img.slide-image {
     user-select: none;
 }
 
-.slide-btn{
+.slide-btn {
     background-color: #FF7F50;
     color: white;
     cursor: pointer;
@@ -174,11 +194,14 @@ img.slide-image {
     width: 100%;
     font-size: 132%;
     display: inline-block;
-    
 }
-.slide-btn:hover{
+
+.slide-btn:hover {
     background-color: #4d0c0c;
     font-size: 140%;
+}
+.mySlides a{
+    margin: 5px 0px;
 }
 
 
@@ -273,31 +296,31 @@ div.desc {
 
 /* contact-form */
 
-.input-box{
+.input-box {
     /* border: 1px black solid; */
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: flex;
-     justify-content: center;
+    justify-content: center;
     /* align-items: center; */
 }
 
-.container{
+.container {
     max-width: 700px;
     width: 100%;
     background-color: #fff;
     padding: 25px 30px;
     border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-  }
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
 
-  .container .title{
+.container .title {
     text-align: center;
     font-size: 25px;
     font-weight: 500;
     position: relative;
-  }
+}
 
-  .container .title::before{
+.container .title::before {
     content: "";
     position: absolute;
     left: 0;
@@ -306,27 +329,28 @@ div.desc {
     width: 30px;
     border-radius: 5px;
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
-  }
+}
 
-  .content form .user-details{
+.content form .user-details {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 32px 0 12px 0;
-  }
+}
 
-  form .user-details .input-box{
+form .user-details .input-box {
     margin-bottom: 15px;
     width: calc(100% / 2 - 20px);
-  }
+}
 
-  form .input-box span.details{
+form .input-box span.details {
     display: block;
     margin: 10px;
     font-weight: 500;
     margin-bottom: 5px;
-  }
-  .user-details .input-box input{
+}
+
+.user-details .input-box input {
     height: 45px;
     width: 100%;
     outline: none;
@@ -336,94 +360,108 @@ div.desc {
     border: 1px solid #ccc;
     border-bottom-width: 2px;
     transition: all 0.3s ease;
-  }
+}
 
-  
+
 .user-details .input-box input:focus,
-.user-details .input-box input:valid{
-  border-color: #9b59b6;
+.user-details .input-box input:valid {
+    border-color: #9b59b6;
 }
- form .input-box .gender-title{
-  font-size: 20px;
-  font-weight: 500;
- }
- form .category{
-   display: flex;
-   width: 80%;
-   margin: 14px 0 ;
-   justify-content: space-between;
- }
- form .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
+
+form .input-box .gender-title {
+    font-size: 20px;
+    font-weight: 500;
 }
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two,
- #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
-   border-color: #d9d9d9;
- }
- form input[type="radio"]{
-   display: none;
- }
- form .button{
-   height: 45px;
-   margin: 35px 0
- }
- form .button input{
-   height: 100%;
-   width: 100%;
-   border-radius: 5px;
-   border: none;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   background: linear-gradient(135deg, #FF7F50, #723e2b);
-   font-weight: bold;
- }
- form .button input:hover{
+
+form .category {
+    display: flex;
+    width: 80%;
+    margin: 14px 0;
+    justify-content: space-between;
+}
+
+form .category label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+form .category label .dot {
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background: #d9d9d9;
+    border: 5px solid transparent;
+    transition: all 0.3s ease;
+}
+
+#dot-1:checked~.category label .one,
+#dot-2:checked~.category label .two,
+#dot-3:checked~.category label .three {
+    background: #9b59b6;
+    border-color: #d9d9d9;
+}
+
+form input[type="radio"] {
+    display: none;
+}
+
+form .button {
+    height: 45px;
+    margin: 35px 0
+}
+
+form .button input {
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    background: linear-gradient(135deg, #FF7F50, #723e2b);
+    font-weight: bold;
+}
+
+form .button input:hover {
     color: black;
     font-weight: bold;
-  transform: scale(0.99);
-  background: linear-gradient(135deg, #be6646, #FF7F50);
-  }
-
- @media(max-width: 584px){
- .container{
-  max-width: 100%;
+    transform: scale(0.99);
+    background: linear-gradient(135deg, #be6646, #FF7F50);
 }
-form .user-details .input-box{
-    margin-bottom: 15px;
-    width: 100%;
-  }
-  form .category{
-    width: 100%;
-  }
-  .content form .user-details{
-    max-height: 300px;
-    overflow-y: scroll;
-  }
-  .user-details::-webkit-scrollbar{
-    width: 5px;
-  }
-  }
-  @media(max-width: 459px){
-  .container .content .category{
-    flex-direction: column;
-  }
+
+@media(max-width: 584px) {
+    .container {
+        max-width: 100%;
+    }
+
+    form .user-details .input-box {
+        margin-bottom: 15px;
+        width: 100%;
+    }
+
+    form .category {
+        width: 100%;
+    }
+
+    .content form .user-details {
+        max-height: 300px;
+        overflow-y: scroll;
+    }
+
+    .user-details::-webkit-scrollbar {
+        width: 5px;
+    }
+}
+
+@media(max-width: 459px) {
+    .container .content .category {
+        flex-direction: column;
+    }
 }
 
 /* Footer */
@@ -451,7 +489,7 @@ footer * {
     padding: 0 10px;
 }
 
-.column-text:hover{
+.column-text:hover {
     color: black;
     font-weight: bold;
 }
@@ -466,12 +504,37 @@ footer * {
     clear: both;
 }
 
-.footer-container .footerimg{
+.footer-container .footerimg {
     margin: -4% 108%;
     height: 10%;
     width: 10%;
 }
 
-.footer-container .footerimg img{
+.footer-container .footerimg img {
     width: 19vh;
+}
+
+.copy-text{
+    margin-top: 2%;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.Constitution{
+    /* max-width: 700px;
+    width: 100%; */
+    padding: 25px 30px;
+    /* border: 2px black solid; */
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    margin: 3%;
+    text-align: center;
+    
+}
+.Constitution img{
+    display: flex;
+    height: 20%;
+    width: 20%;
 }
