--- a/Css/slide.css
+++ b/Css/slide.css
@@ -44,12 +44,8 @@
 }
 
 .navbar-toggler-icon {
-    background-color: #FF7F50;
+    border: none;
 }
-
-/* .navbar-nav {
-    margin-left: 30%;
-} */
 
 .navbar-nav .nav-item {
     padding: 20px;
@@ -84,6 +80,15 @@
 
     .navbar-toggler {
         margin-right: 5px;
+    }
+    
+    .navbar-toggler-icon {
+        border: none;
+    }
+    .container button{
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
     }
 
 }
