--- a/Css/slide.css
+++ b/Css/slide.css
@@ -1,264 +1,290 @@
 * {
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 /* ScrollBar */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #869a8d;
-    border-radius: 12px;
-    transition: all 0.3s ease;
+  background: #869a8d;
+  border-radius: 12px;
+  transition: all 0.3s ease;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #FF7F50;
+  background: #FF7F50;
 }
 
 /* Navbar */
 .navbar {
+  width: 100%;
+  background-color: #FF7F50;
+  border-bottom: 2px solid black;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.shivsena-text {
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  margin-left: 15px;
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler-icon {
+  border: none;
+}
+
+.navbar-nav .nav-item {
+  padding: 20px;
+}
+
+.nav-link {
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.btn-primary {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  border: none;
+  background-color: orange;
+  color: black;
+  font-weight: bold;
+  border-radius: 10vh;
+}
+
+
+@media (max-width: 767px) {
+  .navbar-nav {
+    justify-content: center;
     width: 100%;
-    background-color: #FF7F50;
-    border-bottom: 2px solid black;
   }
-  
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-  .shivsena-text {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    margin-left: 15px;
-  }
-  
+
   .navbar-toggler {
-    border: none;
+    margin-right: 5px;
   }
-  
+
   .navbar-toggler-icon {
     border: none;
   }
-  
-  .navbar-nav .nav-item {
-    padding: 20px;
-  }
-  
-  .nav-link {
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
-  .nav-link:hover {
-    font-size: 17px;
-    font-weight: bold;
-  }
-  
-  .btn-primary {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+
+  .container button {
     border: none;
-    background-color: orange;
-    color: black;
-    font-weight: bold;
-    border-radius: 10vh;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
   }
-  
-  @media (max-width: 767px) {
-    .navbar-nav {
-      justify-content: center;
-      width: 100%;
-    }
-  
-    .navbar-toggler {
-      margin-right: 5px;
-    }
-  
-    .navbar-toggler-icon {
-      border: none;
-    }
-  
-    .container button {
-      border: none;
-      border-radius: 5px;
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
-    }
-  }
-  
+}
+
 
 /* slideshow */
 .carousel-item img {
-    height: 400px;
+  height: 400px;
+}
+
+.carousel-caption .btn-read-story {
+  border: 2px black solid;
+  margin: 0%;
+  color: black;
+}
+
+@media (max-width: 576px) {
+  .carousel-item img {
+    height: 200px;
   }
 
-  .carousel-caption .btn-read-story{
-    border: 2px black solid;
-    margin: 0%;
-    color: black;
+  .carousel-caption a.btn-read-story {
+    display: block;
+    font-size: 20px;
+    margin-top: 10px;
   }
-  
-  @media (max-width: 576px) {
-    .carousel-item img {
-      height: 200px;
-    }
-  
-    .carousel-caption a.btn-read-story {
-      display: block;
-      font-size: 20px;
-      margin-top: 10px;
-    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .carousel-item img {
+    height: 500px;
   }
-  
-  @media (min-width: 768px) and (max-width: 992px) {
-    .carousel-item img {
-      height: 500px;
-    }
-  
-    .carousel-caption a.btn-read-story {
-      display: none;
-    }
+
+  .carousel-caption a.btn-read-story {
+    display: none;
   }
-  
-  @media (min-width: 992px) {
-    .carousel-item img {
-      height: 600px;
-    }
-  
-    .carousel-caption a.btn-read-story {
-      display: none;
-    }
+}
+
+@media (min-width: 992px) {
+  .carousel-item img {
+    height: 600px;
   }
-  
-  
+
+  .carousel-caption a.btn-read-story {
+    display: none;
+  }
+}
+
+
 
 /* Image Gallery */
 .gallery {
-    margin-top: 30px;
-    border: 1px solid #ccc;
-    padding: 10px;
+  margin-top: 30px;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.gallery:hover {
+  border: 1px solid #777;
+}
+
+.gallery img {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 38vh;
+
+}
+
+.desc {
+  padding: 15px;
+  text-align: justify;
+}
+
+.responsive {
+  padding: 10px;
+  float: left;
+  width: 25%;
+}
+
+.gallery-button {
+  border: none;
+  padding: 7px 10px;
+  font-size: 15px;
+  border-radius: 0.375rem;
+  background-color: #1d4ed8;
+  color: #fff;
+  cursor: pointer;
+}
+
+.gallery-button:hover {
+  color: #fff;
+  font-weight: bold;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 50%;
+    margin: 6px 0;
   }
-  
-  .gallery:hover {
-    border: 1px solid #777;
-  }
-  
+
   .gallery img {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    border: 2px black solid;
     width: 100%;
     height: 38vh;
 
   }
-  
-  .desc {
-    padding: 15px;
-    text-align: justify;
-  }
-  
+
+}
+
+@media only screen and (max-width: 500px) {
   .responsive {
-    padding: 10px;
-    float: left;
-    width: 25%;
+    width: 100%;
   }
-  
-  .gallery-button {
-    border: none;
-    padding: 7px 10px;
-    font-size: 15px;
-    border-radius: 0.375rem;
-    background-color: #1d4ed8;
-    color: #fff;
-    cursor: pointer;
+
+  .gallery img {
+    border: 2px black solid;
+    width: 100%;
+    height: 38vh;
+
   }
-  
-  .gallery-button:hover {
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  .clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  @media only screen and (max-width: 700px) {
-    .responsive {
-      width: 50%;
-      margin: 6px 0;
-    }
-    .gallery img {
-        border: 2px black solid;
-        width: 100%;
-        height: 38vh;
-    
-      }
-      
-  }
-  
-  @media only screen and (max-width: 500px) {
-    .responsive {
-      width: 100%;
-    }
-    .gallery img {
-        border: 2px black solid;
-        width: 100%;
-        height: 38vh;
-    
-      }
-  }
-  
+}
+
 
 
 
 /* Footer */
 footer {
-    background-color: #FF7F50;
-    color: white;
-    font-size: 16px;
-  }
-  
-  footer h3 {
-    color: white;
-    font-weight: bold;
-  }
-  
-  footer a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  footer a:hover {
-    color: black;
-  }
-  
-  .footerimg img {
-    width: 19vh;
-  }
-  
-  .copy-text {
-    margin-top: 2%;
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
-  @media (max-width: 767px) {
-    .footerimg {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-  
-    .copy-text {
-      margin-top: 10px;
-    }
-  }
-  
+  background-color: #FF7F50;
+  color: white;
+  font-size: 16px;
+}
 
-  
+footer h3 {
+  color: white;
+  font-weight: bold;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: black;
+}
+
+.footerimg img {
+  width: 19vh;
+}
+
+.copy-text {
+  text-align: center;
+  margin-top: 2%;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+@media (max-width: 767px) {
+  .footerimg {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .copy-text {
+    margin-top: 10px;
+  }
+}
+
+/* dropdown */
+.dropdown-item:hover {
+  background-color: #1d4ed8;
+  color: white;
+}
+
+/* minister card */
+.container-card {
+  display: flex;
+  justify-content: center;
+}
+.card {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  margin: 10px;
+}
+.card-body {
+  text-align: justify;
+}
+
+.center{
+  margin: 10px;
+  text-align: center;
+}
