--- a/Css/card.css
+++ b/Css/card.css
@@ -25,6 +25,9 @@
   top: 50%;
   transform: translateY(-50%);
 }
+.carousel-control-prev:hover{background-color: black;}
+.carousel-control-next:hover{background-color: black;}
+
 @media (min-width: 768px) {
   .card img {
     height: 11em;
