--- a/Css/slide.css
+++ b/Css/slide.css
@@ -97,6 +97,9 @@
 
 
 /* slideshow */
+.carousel{
+  z-index: 0;
+}
 .carousel-item img {
   height: 400px;
 }
@@ -287,4 +290,60 @@ footer a:hover {
 .center{
   margin: 10px;
   text-align: center;
+}
+
+/* sidenav */
+.mysidenav{
+  background-color: #FF7F50;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.mysidenav a{
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color:  black;
+  display: block;
+  transition: 0.3s;
+}
+.mysidenav .closebtn{
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .mysidenav {padding-top: 15px;}
+  .mysidenav a {font-size: 18px;}
+}
+
+/* only for margin */
+.margin{
+  margin: 10px;
+  width: 85%;
+  margin-top: 10%;
+}
+
+/* up button */
+.scroll-button a{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: white;
+  background: #FF7F50;
+  padding: 7px 12px;
+  font-size: 18px;
+  border-radius: 6px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  display: none;
 }
