--- a/Css/slide.css
+++ b/Css/slide.css
@@ -145,8 +145,11 @@
 
 
 /* Image Gallery */
-.gallery {
+.event-center{
   margin-top: 30px;
+  text-align: center;
+}
+.gallery {
   border: 1px solid #ccc;
   padding: 10px;
 }
@@ -193,6 +196,7 @@
   display: table;
   clear: both;
 }
+
 
 @media only screen and (max-width: 700px) {
   .responsive {
@@ -322,6 +326,7 @@ footer a:hover {
   margin-left: 50px;
 }
 
+
 @media screen and (max-height: 450px) {
   .mysidenav {padding-top: 15px;}
   .mysidenav a {font-size: 18px;}
@@ -335,7 +340,9 @@ footer a:hover {
 }
 
 /* up button */
+
 .scroll-button a{
+  z-index: 1;
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -347,3 +354,47 @@ footer a:hover {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
   display: none;
 }
+
+.ideal-class {
+  display: flex;
+  justify-content: center;
+}
+
+.ideal-gallery {
+  width: 80%;
+  max-width: 1200px;
+}
+
+.ideal-responsive {
+  width: 33.33%;
+  padding: 5px;
+  float: left;
+}
+.card a img{
+  width: 100%;
+}
+
+/* Mobile devices */
+@media screen and (max-width: 480px) {
+  .ideal-responsive {
+      width: 100%;
+      float: none;
+  }
+}
+
+/* Tablets and small desktop screens */
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .ideal-responsive {
+      width: 50%;
+      float: none;
+  }
+}
+
+/* Larger desktop screens */
+@media screen and (min-width: 769px) {
+  .ideal-responsive {
+      width: 33.33%;
+      float: left;
+  }
+}
+
